--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
+* {
+    box-sizing: border-box;
+}
 
 body {
+    padding: 1em 1.5em;
+    margin: 0;
+    min-height: 100vh;
+    background-image: 
+        linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0.4) 60%),
+        url(media/view.jpg), 
+        linear-gradient(to right, #619bed, #588fe1);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: left 50% bottom;
+}
+
+header, main {
     max-width: 600px;
     margin: 1em auto;
-    padding: 1em;
+}
+
+footer {
+    padding: 0 0 34vw 0;
+}
+
+
+h1, h2, h3, h4 {
+    color: #071d39;
 }
