add icons, button, and other styling changes

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 }
 
 body {
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-size: 16px;
     padding: 1em 1.5em;
     margin: 0;
     min-height: 100vh;
@@ -24,7 +26,57 @@ footer {
     padding: 0 0 34vw 0;
 }
 
+.shortcuts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+    padding: 0;
+    margin-bottom: 4rem;
+    text-align: center;
+}
+.shortcuts li {
+    list-style: none;
+}
+
+.shortcut-icon {
+    display: block;
+    width: 100%;
+    max-width: 150px;
+    margin: 0 auto;
+}
+
+
+
 
 h1, h2, h3, h4 {
+    font-family: Georgia, Times, Times New Roman, serif;
     color: #071d39;
 }
+h1 {
+    margin: 1em 0;
+}
+h2, h3, h4, h5, h6 {
+    margin: 1.6em 0 1rem 0;
+}
+p {
+    margin: 1rem 0;
+}
+
+.button {
+    display: inline-block;
+    background-color: #1a73e8;
+    color: #fff;
+    border-radius: 4px;
+    text-decoration: none;
+    padding: 12px 24px;
+}
+.button:hover {
+    background-color: #287ae6;
+    box-shadow: 0 1px 1px 0 rgba(66,133,244,0.45),0 1px 3px 1px rgba(66,133,244,0.3);
+}
+.button:active {
+    background-color: #3367d6;
+}
+
+
+
