--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: 16px;
+    line-height: 1.25;
     padding: 1em 1.5em;
     margin: 0;
     min-height: 100vh;
